load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "renderer",
    entry_point = "renderer.ts",
    data = [
        ":renderer_lib",
        "@npm//yargs",
    ],
)

ts_library(
    name = "renderer_lib",
    srcs = ["renderer.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs",
    ],
)

jasmine_node_test(
    name = "renderer_integration_test",
    data = [":renderer"],
    deps = [":renderer_integration_test_lib"],
)

ts_library(
    name = "renderer_integration_test_lib",
    srcs = ["renderer_test.ts"],
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)
