load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load(":build_vars.bzl", "RENDERER_RUNTIME_DEPS")

ts_library(
    name = "renderer",
    srcs = ["renderer.ts"],
    visibility = ["//visibility:public"],
    deps = [
        ":entry_point",
        "@npm//@types/node",
        "@npm//@types/yargs",
    ],
)

filegroup(
    name = "renderer_js",
    srcs = [":renderer"],
    visibility = ["//visibility:public"],
    output_group = "es5_sources",
)

nodejs_binary(
    name = "renderer_test_binary",
    entry_point = "renderer.ts",
    testonly = True,
    data = RENDERER_RUNTIME_DEPS + [
        ":renderer",
    ],
)

jasmine_node_test(
    name = "renderer_integration_test",
    data = [":renderer_test_binary"],
    deps = [":renderer_integration_test_lib"],
)

ts_library(
    name = "renderer_integration_test_lib",
    srcs = ["renderer_test.ts"],
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

ts_library(
    name = "dynamic_import",
    srcs = ["dynamic_import.ts"],
)

ts_library(
    name = "entry_point",
    srcs = ["entry_point.ts"],
    deps = [":dynamic_import"],
)

ts_library(
    name = "entry_point_test_lib",
    srcs = ["entry_point_test.ts"],
    deps = [
        ":dynamic_import",
        ":entry_point",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "entry_point_test",
    deps = [":entry_point_test_lib"],
)
