load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "browser_archive_repo",
    srcs = ["browser_archive_repo.bzl"],
    visibility = [
        "//bazel/browsers/chromium:__pkg__",
        "//bazel/browsers/firefox:__pkg__",
    ],
)

bzl_library(
    name = "browser_configure",
    srcs = ["browser_configure.bzl"],
)

bzl_library(
    name = "browser_repositories",
    srcs = ["browser_repositories.bzl"],
    deps = [
        "//bazel/browsers/chromium:chromium_bzl",
        "//bazel/browsers/firefox:firefox_bzl",
    ],
)

bzl_library(
    name = "browser_toolchain_alias",
    srcs = ["browser_toolchain_alias.bzl"],
    deps = [":browser_configure"],
)
