load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools:jasmine.bzl", "jasmine_node_test")

ts_library(
    name = "prerender_annotation",
    srcs = ["prerender_annotation.ts"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "prerender_annotation_test_lib",
    srcs = ["prerender_annotation_test.ts"],
    testonly = True,
    deps = [
        ":prerender_annotation",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "prerender_annotation_test",
    deps = [":prerender_annotation_test_lib"],
)

ts_library(
    name = "prerender_annotation_mock",
    srcs = ["prerender_annotation_mock.ts"],
    testonly = True,
    visibility = ["//visibility:public"],
    deps = [":prerender_annotation"],
)

ts_library(
    name = "prerender_metadata",
    srcs = ["prerender_metadata.ts"],
    visibility = ["//visibility:public"],
    deps = [":prerender_annotation"],
)

ts_library(
    name = "prerender_metadata_test_lib",
    srcs = ["prerender_metadata_test.ts"],
    testonly = True,
    deps = [
        ":prerender_metadata",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "prerender_metadata_test",
    deps = [":prerender_metadata_test_lib"],
)

ts_library(
    name = "prerender_metadata_mock",
    srcs = ["prerender_metadata_mock.ts"],
    testonly = True,
    visibility = ["//visibility:public"],
    deps = [
        ":prerender_annotation",
        ":prerender_metadata",
    ],
)

ts_library(
    name = "prerender_resource",
    srcs = ["prerender_resource.ts"],
    visibility = ["//visibility:public"],
    deps = [":url_path"],
)

ts_library(
    name = "prerender_resource_test_lib",
    srcs = ["prerender_resource_test.ts"],
    testonly = True,
    deps = [
        ":prerender_resource",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "prerender_resource_test",
    deps = [":prerender_resource_test_lib"],
)

ts_library(
    name = "url_path",
    srcs = ["url_path.ts"],
)

ts_library(
    name = "url_path_test_lib",
    srcs = ["url_path_test.ts"],
    testonly = True,
    deps = [
        ":url_path",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "url_path_test",
    deps = [":url_path_test_lib"],
)
