load("//tools/jasmine:defs.bzl", "jasmine_node_test")
load("//tools/typescript:defs.bzl", "ts_project")

ts_project(
    name = "prerender_annotation",
    srcs = ["prerender_annotation.mts"],
    visibility = ["//:__subpackages__"],
)

ts_project(
    name = "prerender_annotation_test_lib",
    srcs = ["prerender_annotation_test.mts"],
    testonly = True,
    deps = [
        ":prerender_annotation",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "prerender_annotation_test",
    deps = [":prerender_annotation_test_lib"],
)

ts_project(
    name = "prerender_annotation_mock",
    srcs = ["prerender_annotation_mock.mts"],
    testonly = True,
    visibility = ["//:__subpackages__"],
    deps = [":prerender_annotation"],
)

ts_project(
    name = "prerender_metadata",
    srcs = ["prerender_metadata.mts"],
    visibility = ["//:__subpackages__"],
)

ts_project(
    name = "prerender_metadata_test_lib",
    srcs = ["prerender_metadata_test.mts"],
    testonly = True,
    deps = [
        ":prerender_metadata",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "prerender_metadata_test",
    deps = [":prerender_metadata_test_lib"],
)

ts_project(
    name = "prerender_metadata_mock",
    srcs = ["prerender_metadata_mock.mts"],
    testonly = True,
    visibility = ["//:__subpackages__"],
    deps = [":prerender_metadata"],
)

ts_project(
    name = "prerender_resource",
    srcs = ["prerender_resource.mts"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":url_path",
        "//common/safe_html",
    ],
)

ts_project(
    name = "prerender_resource_test_lib",
    srcs = ["prerender_resource_test.mts"],
    testonly = True,
    deps = [
        ":prerender_resource",
        "//common/safe_html",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "prerender_resource_test",
    deps = [":prerender_resource_test_lib"],
)

ts_project(
    name = "url_path",
    srcs = ["url_path.mts"],
)

ts_project(
    name = "url_path_test_lib",
    srcs = ["url_path_test.mts"],
    testonly = True,
    deps = [
        ":url_path",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "url_path_test",
    deps = [":url_path_test_lib"],
)
