load("//:index.bzl", "web_resources", "web_resources_devserver")
load("//tools/jasmine:defs.bzl", "jasmine_node_test", "jasmine_web_test_suite")
load("//tools/typescript:defs.bzl", "ts_project")

ts_project(
    name = "binary",
    testonly = True,
    srcs = ["binary.mts"],
    visibility = ["//:__subpackages__"],
    deps = ["//:node_modules/@types/node"],
)

ts_project(
    name = "binary_test_lib",
    testonly = True,
    srcs = ["binary_test.mts"],
    deps = [
        ":binary",
        ":temp_dir",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
    ],
)

jasmine_node_test(
    name = "binary_test",
    deps = [":binary_test_lib"],
)

ts_project(
    name = "devserver",
    testonly = True,
    srcs = ["devserver.mts"],
    data = [
        "//:node_modules/http-status-codes",
        "//:node_modules/tree-kill",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":effects",
        ":test_server",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/http-status-codes",
        "//:node_modules/tree-kill",
        "//common:http",
    ],
)

ts_project(
    name = "devserver_test_lib",
    testonly = True,
    srcs = ["devserver_test.mts"],
    data = ["//:node_modules/http-status-codes"],
    deps = [
        ":devserver",
        ":effect_tester",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
        "//:node_modules/http-status-codes",
        "//common:http",
    ],
)

web_resources(
    name = "devserver_test_resources",
    testonly = True,
    entries = {
        "/devserver_test_page.html": "devserver_test_page.html",
    },
)

web_resources_devserver(
    name = "devserver_test_server",
    testonly = True,
    resources = ":devserver_test_resources",
)

jasmine_node_test(
    name = "devserver_test",
    data = [":devserver_test_server"],
    deps = [":devserver_test_lib"],
)

ts_project(
    name = "effects",
    testonly = True,
    srcs = ["effects.mts"],
    deps = [
        "//:node_modules/@types/jasmine",
    ],
)

ts_project(
    name = "effects_test_lib",
    testonly = True,
    srcs = ["effects_test.mts"],
    deps = [
        ":effects",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "effects_test",
    deps = [":effects_test_lib"],
)

ts_project(
    name = "effect_fake",
    testonly = True,
    srcs = ["effect_fake.mts"],
    visibility = ["//:__subpackages__"],
    deps = [":effects"],
)

ts_project(
    name = "effect_fake_test_lib",
    testonly = True,
    srcs = ["effect_fake_test.mts"],
    deps = [
        ":effect_fake",
        ":effects",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "effect_fake_test",
    deps = [":effect_fake_test_lib"],
)

ts_project(
    name = "effect_tester",
    testonly = True,
    srcs = ["effect_tester.mts"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":effects",
        "//:node_modules/@types/jasmine",
    ],
)

ts_project(
    name = "effect_tester_test_lib",
    testonly = True,
    srcs = ["effect_tester_test.mts"],
    deps = [
        ":effect_fake",
        ":effect_tester",
        ":effects",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "effect_tester_test",
    deps = [":effect_tester_test_lib"],
)

ts_project(
    name = "mocks",
    testonly = True,
    srcs = ["mocks.mts"],
    visibility = ["//:__subpackages__"],
    deps = ["//:node_modules/@types/jasmine"],
)

ts_project(
    name = "mocks_test_lib",
    testonly = True,
    srcs = ["mocks_test.mts"],
    deps = [
        ":mocks",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "mocks_test",
    deps = [":mocks_test_lib"],
)

ts_project(
    name = "temp_dir",
    testonly = True,
    srcs = ["temp_dir.mts"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":effects",
        "//:node_modules/@types/node",
    ],
)

ts_project(
    name = "temp_dir_test_lib",
    testonly = True,
    srcs = ["temp_dir_test.mts"],
    deps = [
        ":effect_tester",
        ":temp_dir",
        "//:node_modules/@types/jasmine",
        "//:node_modules/@types/node",
    ],
)

jasmine_node_test(
    name = "temp_dir_test",
    deps = [":temp_dir_test_lib"],
)

ts_project(
    name = "test_server",
    testonly = True,
    srcs = ["test_server.mts"],
)

ts_project(
    name = "test_server_test_lib",
    testonly = True,
    srcs = ["test_server_test.mts"],
    deps = [
        ":test_server",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "test_server_test",
    deps = [":test_server_test_lib"],
)

ts_project(
    name = "webdriver",
    testonly = True,
    srcs = ["webdriver.mts"],
    data = ["//:node_modules/webdriverio"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":effects",
        ":test_server",
        "//:node_modules/@types/node",
        "//:node_modules/webdriverio",
    ],
)

ts_project(
    name = "webdriver_test_lib",
    testonly = True,
    srcs = ["webdriver_test.mts"],
    deps = [
        "effect_tester",
        ":devserver",
        ":webdriver",
        "//:node_modules/@types/jasmine",
        "//:node_modules/webdriverio",
    ],
)

web_resources(
    name = "webdriver_test_resources",
    testonly = True,
    entries = {
        "/webdriver_test_page.html": "webdriver_test_page.html",
    },
)

web_resources_devserver(
    name = "webdriver_test_server",
    testonly = True,
    resources = ":webdriver_test_resources",
)

jasmine_web_test_suite(
    name = "webdriver_test",
    data = [":webdriver_test_server"],
    deps = [":webdriver_test_lib"],
)
