load("//tools/jasmine:defs.bzl", "jasmine_node_test")
load("//tools/typescript:defs.bzl", "ts_project")

ts_project(
    name = "delayed",
    srcs = ["delayed.mts"],
    visibility = ["//docs:__subpackages__"],
)

ts_project(
    name = "delayed_test_lib",
    srcs = ["delayed_test.mts"],
    testonly = True,
    deps = [
        ":delayed",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "delayed_test",
    deps = [":delayed_test_lib"],
)

ts_project(
    name = "imperative_iterator",
    srcs = ["imperative_iterator.mts"],
    visibility = ["//docs:__subpackages__"],
    deps = [":delayed"],
)

ts_project(
    name = "imperative_iterator_test_lib",
    srcs = ["imperative_iterator_test.mts"],
    testonly = True,
    deps = [
        ":imperative_iterator",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "imperative_iterator_test",
    deps = [":imperative_iterator_test_lib"],
)

ts_project(
    name = "iterables",
    srcs = ["iterables.mts"],
    visibility = ["//docs:__subpackages__"],
    deps = [":imperative_iterator"],
)

ts_project(
    name = "iterables_test_lib",
    srcs = ["iterables_test.mts"],
    testonly = True,
    deps = [
        ":iterables",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_node_test(
    name = "iterables_test",
    deps = [":iterables_test_lib"],
)
