load("//:index.bzl", "css_library", "prerender_component")
load("//tools/jasmine:defs.bzl", "jasmine_node_test")
load("//tools/typescript:defs.bzl", "ts_project")

exports_files([
    "tutorials/components/components.md",
    "tutorials/getting_started/getting_started.md",
])

prerender_component(
    name = "index",
    prerender = ":prerender",
    styles = ":styles",
    visibility = ["//docs:__pkg__"],
)

ts_project(
    name = "prerender",
    srcs = ["index.tsx"],
    deps = [
        "//docs:routing",
        "//docs/components/layout:layout_prerender",
        "//docs/components/under_construction_banner:under_construction_banner_prerender",
        "//:node_modules/@rules_prerender/preact",
        "//:node_modules/preact",
    ],
)

ts_project(
    name = "prerender_test_lib",
    srcs = ["index_test.tsx"],
    testonly = True,
    deps = [
        ":prerender",
        "//docs:routing_mock",
        "//:node_modules/@types/jasmine",
        "//:node_modules/node-html-parser",
        "//:node_modules/preact",
        "//:node_modules/preact-render-to-string",
    ],
)

jasmine_node_test(
    name = "prerender_test",
    deps = [":prerender_test_lib"],
)

css_library(
    name = "styles",
    srcs = ["index.css", "index_global.css"],
)
