load("//tools/typescript:defs.bzl", "ts_project")
load(
    "//:index.bzl",
    "prerender_component",
    "prerender_pages",
    "web_resources_devserver",
)
load("//tools/jasmine:defs.bzl", "jasmine_web_test_suite")

prerender_pages(
    name = "page",
    src = "page.ts",
    tsconfig = "//:tsconfig",
    source_map = True,
    bundle_js = False, # Optimization: No client-side JavaScript on this page.
    lib_deps = ["//:node_modules/rules_prerender"],
    deps = [":component"],
)

prerender_component(
    name = "component",
    srcs = ["component.ts"],
    tsconfig = "//:tsconfig",
    source_map = True,
    lib_deps = [":ts_dep"],
    deps = [":dep"],
)

ts_project(
    name = "ts_dep",
    srcs = ["ts_dep.ts"],
)

prerender_component(
    name = "dep",
    srcs = ["dep.ts"],
    tsconfig = "//:tsconfig",
    source_map = True,
    deps = [":transitive"],
)

prerender_component(
    name = "transitive",
    srcs = ["transitive.ts"],
    tsconfig = "//:tsconfig",
    source_map = True,
)

web_resources_devserver(
    name = "devserver",
    resources = ":page",
)

ts_project(
    name = "test_lib",
    srcs = ["test.ts"],
    testonly = True,
    deps = [
        "//common/testing:devserver",
        "//common/testing:webdriver",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_web_test_suite(
    name = "test",
    browsers = ["//tools/browsers:chromium-local"],
    data = [":devserver"],
    deps = [":test_lib"],
)
